--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -1,5 +1,20 @@
 .center {
   text-align: center;
   font-size: x-large;
+  border-bottom: 1px solid white;
+  padding-bottom: 10px;
   // border: 1px solid red;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  // gap: 5px;
+  padding: 10px;
+}
+
+.icon {
+  font-size: 30px;
+  margin-right: 5px;
 }
