--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -40,6 +40,9 @@
     <ion-card-subtitle
       >Dificultad: {{ ruta.difficulty_level }}</ion-card-subtitle
     >
+    <ion-card-subtitle
+      >Distancia: {{ ruta.distance | number : ".0-0" }} km</ion-card-subtitle
+    >
   </ion-card-header>
 
   <ion-card-content>
