--- a/bikeBros/src/app/pages/register/register.page.html
+++ b/bikeBros/src/app/pages/register/register.page.html
@@ -54,7 +54,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-label>Imágenes</ion-label>
+      <ion-label>Imágen de perfil</ion-label>
       <input type="file" (change)="onImageChange($event)" accept="image/*" />
     </ion-item>
 
