--- a/bikeBros/src/app/pages/route/route.page.html
+++ b/bikeBros/src/app/pages/route/route.page.html
@@ -10,7 +10,7 @@
       >
         <ion-icon [name]="isFav ? 'heart' : 'heart-outline'"></ion-icon>
       </ion-button>
-      <ion-button (click)="share()">
+      <ion-button (click)="shareViaSocialMedia()">
         <ion-icon name="share"></ion-icon>
       </ion-button>
     </ion-buttons>
