--- a/bikeBros/src/app/components/box-comments/box-comments.component.html
+++ b/bikeBros/src/app/components/box-comments/box-comments.component.html
@@ -12,7 +12,7 @@
       <ion-label text-wrap>
         <h2>{{ comment.authorNick }}</h2>
         <p>{{ comment.content }}</p>
-        <p>ID: {{ comment._id }}</p>
+        <!-- <p>ID: {{ comment._id }}</p> -->
         <ion-button color="danger">Eliminar</ion-button>
       </ion-label>
     </ion-item>
