--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -9,9 +9,8 @@
 .buttons {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   // gap: 5px;
-  padding: 10px;
 }
 
 .icon {
